package ar.edu.utn.frba.dds.entidades;

public enum TipoDeTransporte {
  SUBTERRANEO,
  FERROCARRIL
}
