@startuml TPA1-Clases
skinparam linetype ortho
class ServicioPublico{
    nombre: String
}
class LineaDeTransporte {
  estaciones: List<Estaciones>
  tipoDeTransporte: TipoDeTransporte
  --
  Estacion estacionOrigen()
  Estacion estacionDestino()
}
enum TipoDeTransporte {
    SUBTERRANEO
    FERROCARRIL
}
class Estacion {
  nombre: String
  ubicacion: String ??
  servicios: List<Servicio>
  --
  agregarServicio(Servicio)
  removerServicio(Servicio)
}
class Comunidad {
  miembros: List<Miembro>
  --
  crearServicio()
}

class Usuario {
  usuario: String
  contraseña: String
  nombre: String
  apellido: String
  correoElectronico: String
  comunidades: List<Miembro>
}

class Miembro {
  usuario: Usuario
  comunidad: Comunidad
  esAdministrador: Boolean
}

class Servicio{
    servicios: List<Servicio>
    nombre: String
}

ServicioPublico <|-- LineaDeTransporte
Usuario "*"<--> Miembro
Comunidad "*"<-> Miembro
LineaDeTransporte -->"*" Estacion
TipoDeTransporte <-- LineaDeTransporte
Estacion ->"*" Servicio
Comunidad ..> Servicio
@enduml